--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#!">InProcess</a>
+            <a class="navbar-brand" href="#!">Camisas.com</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">sobre nosotros</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link" href="#!">sobre nosotros</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">Tipo de Compra</a>
@@ -44,15 +44,15 @@
                             <li><a class="dropdown-item" href="#!">chaquetas</a></li>
                             <li><a class="dropdown-item" href="#!">Zapatillas</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
-                <form class="d-flex">
+                <!-- <form class="d-flex">
                     <button class="btn btn-outline-dark" type="submit" disabled>
                         <i class="bi-cart-fill me-1"></i>
                         Cart
                         <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                     </button>
-                </form>
+                </form> -->
             </div>
         </div>
     </nav>
@@ -83,10 +83,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -104,10 +104,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -127,10 +127,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -148,10 +148,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -168,10 +168,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -192,10 +192,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -215,10 +215,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -238,10 +238,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -261,10 +261,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -284,10 +284,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -307,10 +307,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -330,10 +330,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -353,10 +353,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -376,10 +376,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -399,10 +399,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col mb-5">
@@ -422,10 +422,10 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <!--<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
